[package]
name = "libmdns"
version = "0.7.5"
authors = ["Will Stott <willstott101+libmdns@gmail.com>"]

description = "mDNS Responder library for building discoverable LAN services in Rust"
repository = "https://github.com/librespot-org/libmdns"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.3"
if-addrs = { version = "0.10", optional = true }
hostname = "0.3"
log = "0.4"
multimap = "0.8"
rand = "0.8"
futures-util = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync","net","rt"] }
socket2 = { version = "0.4", features = ["all"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["netioapi"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
env_logger =  { version = "0.8", default-features = false, features = ["termcolor","humantime","atty"] }
